_sass/render.scss
.render {
  /* Ignore `h1` tag */
  h1 {
    display: none;
  }

  h2,
  h3,
  h4,
  h5,
  h6 {
    margin: 1em 0;
    color: rgba($on-surface-color, 0.87);
    font-weight: bold;
    word-break: break-all;
  }

  h2 {
    font-size: 1.6rem;
  }

  h3 {
    font-size: 1.4rem;
  }

  h4 {
    font-size: 1.3rem;
  }

  h5 {
    font-size: 1.2rem;
  }

  h6 {
    font-size: 1.1rem;
  }

  ul,
  ol {
    margin: 0;
    padding-left: 1.5rem;
  }

  img {
    max-width: 100%;
    max-height: 50vh;
    margin: 0 auto;
  }

  a {
    color: $primary-color;
    background-image: linear-gradient(90deg, $primary-color, $primary-color);
    background-repeat: no-repeat;
    background-position: 0% 100%;
    background-size: 0% 0.0625em;
    transition: background-size 0.5s;
    text-decoration: none;

    :focus,
    :hover {
      background-size: 100% 0.0625em;
    }

    > code {
      color: $primary-color;
    }
  }

  strong {
    color: rgba($on-surface-color, 0.87);
    font-weight: bold;
  }

  blockquote {
    margin: 1rem 0;
    padding: 1rem;
    background-color: rgba($on-background-color, 0.05);
    color: rgba($on-surface-color, 0.87);
    border-left: 0.25rem rgba($on-surface-color, 0.05) solid;

    >:first-child {
      margin-top: 0;
    }

    >:last-child {
      margin-bottom: 0;
    }
  }

  > blockquote:first-child {
    background-color: transparent;
    color: rgba($on-surface-color, 0.87);
    font-size: 1.4rem;
    border-left: none;

    ::before {
      content: "\201C";
      margin: -5px 10px 0px -10px;
      color: rgba($on-surface-color, 0.87);
      float: left;
      font-size: 2em;
      font-family: Georgia;
    }
  }

  code {
    padding: 0.25rem;
    color: rgba($on-surface-color, 0.87);
    background-color: rgba($on-background-color, 0.05);
    font-family: 'Fira Code', monospace;
    font-size: 0.8em;
  }

  figure.highlight {
    margin: 0;
  }

  pre {
    margin: 1rem 0;
    padding: 1rem;
    background-color: rgba($on-background-color, 0.05);
    overflow-x: auto;

    :first-child {
      margin-top: 0;
    }

    :last-child {
      margin-bottom: 0;
    }

    > code {
      display: block;
      padding: 0;
      background-color: transparent;
    }
  }

  .task-list-item {
    list-style-type: none;

    input {
      margin: 0 0.4rem 0 -1.1rem;
      vertical-align: middle;
    }
  }

  table {
    margin: 1rem 0;
    border-spacing: 0;
    border-collapse: collapse;

    th {
      color: rgba($on-surface-color, 0.87);
      font-weight: bold;
    }

    td,
    th {
      padding: 6px 13px;
      border: 1px #2f2f2f solid;
    }

    tr:nth-child(2n) {
      background-color: rgba($on-background-color, 0.05);
    }
  }

  del {
    color: #6c6c6c;
  }

  hr {
    margin: 1rem 0;
    border: none;
    border-top: 1px rgba($on-surface-color, 0.12) solid;
  }
  
  /* Dracula Theme v1.2.5
  *
  * https://github.com/zenorocha/dracula-theme
  *
  * Copyright 2016, All rights reserved
  *
  * Code licensed under the MIT license
  * http://zenorocha.mit-license.org
  *
  * @author Rob G <wowmotty@gmail.com>
  * @author Chris Bracco <chris@cbracco.me>
  * @author Zeno Rocha <hi@zenorocha.com>
  */

  $dt-gray-dark: #282a36;  // Background
  $dt-gray: #44475a;       // Current Line & Selection
  $dt-gray-light: #f8f8f2; // Foreground
  $dt-blue: #6272a4;       // Comment
  $dt-cyan: #8be9fd;
  $dt-green: #50fa7b;
  $dt-orange: #ffb86c;
  $dt-pink: #ff79c6;
  $dt-purple: #bd93f9;
  $dt-red: #ff5555;
  $dt-yellow: #f1fa8c;

  .highlighter-rouge {
    margin-bottom: 1rem;
  }

  .highlight {
    .hll,
    .s,
    .sa,
    .sb,
    .sc,
    .dl,
    .sd,
    .s2,
    .se,
    .sh,
    .si,
    .sx,
    .sr,
    .s1,
    .ss {
      color: $dt-yellow;
    }

    .go {
      color: $dt-gray;
    }

    .err,
    .g,
    .l,
    .n,
    .x,
    .p,
    .ge,
    .gr,
    .gh,
    .gi,
    .gp,
    .gs,
    .gu,
    .gt,
    .ld,
    .no,
    .nd,
    .ni,
    .ne,
    .nn,
    .nx,
    .py,
    .w,
    .bp {
      color: $dt-gray-light;
    }

    .gh,
    .gi,
    .gu {
      font-weight: bold;
    }

    .ge {
      text-decoration: underline;
    }

    .bp {
      font-style: italic;
    }

    .c,
    .ch,
    .cm,
    .cpf,
    .c1,
    .cs {
      color: $dt-blue;
    }

    .kd,
    .kt,
    .nb,
    .nl,
    .nv,
    .vc,
    .vg,
    .vi,
    .vm {
      color: $dt-cyan;
    }

    .kd,
    .nb,
    .nl,
    .nv,
    .vc,
    .vg,
    .vi,
    .vm {
      font-style: italic;
    }

    .na,
    .nc,
    .nf,
    .fm {
      color: $dt-green;
    }

    .k,
    .o,
    .cp,
    .kc,
    .kn,
    .kp,
    .kr,
    .nt,
    .ow {
      color: $dt-pink;
    }

    .m,
    .mb,
    .mf,
    .mh,
    .mi,
    .mo,
    .il {
      color: $dt-purple;
    }

    .gd {
      color: $dt-red;
    }
  }
}

